# FPGA_MNIST

./: .gitignore  README.md
00_Data/ILA/: dwconv1.csv  dwconv1_04.csv  dwconv1_05.csv  dwconv1_dconv_inout.csv  dwconv1_dconv_out.csv  dwconv1_pconv_out.csv  dwconv2.csv  dwconv2_dconv_inout.csv  dwconv2_dconv_out.csv  dwconv3.csv
00_Data/ROM/: img_rom.coe  weight_rom.coe
00_Data/TIM/: dwconv1_dconv_in.tim  dwconv1_padding_in.tim  dwconv1_pconv_in.tim  dwconv1_pconv_out.tim  dwconv2_dconv_in.tim  dwconv2_padding_in.tim  dwconv2_pconv_in.tim  dwconv2_pconv_out.tim  dwconv3_dconv_in.tim  dwconv3_padding_in.tim  dwconv3_pconv_in.tim  dwconv3_pconv_out.tim
01_Model/: summary.py  test.py  train.py
01_Model/models/: [Net_DW]-Epoch46-Acc0.921.pth  (+1 more)
02_Quantization/: net.py  onetest.py  quantization.py  test.py
03_Parameter/: export_dataset.py  export_input_coe.py  export_parameters.py  export_verilog.py  export_weight_coe.py
04_C_Plus_Simulation/: CMakeLists.txt  main.cpp
04_C_Plus_Simulation/include/: exception.h
04_C_Plus_Simulation/include/comparison/: CpVSPy.h  pytorch.h
04_C_Plus_Simulation/include/layer/: activations.h  convolution.h  normalization.h  pooling.h
04_C_Plus_Simulation/include/matrix/: matrix.h  matrix2d.h  matrix3d.h  matrix4d.h
04_C_Plus_Simulation/src/comparison/: CpVSPy.cpp  pytorch.cpp
04_C_Plus_Simulation/src/layer/: activations.cpp  convolution.cpp  normalization.cpp  pooling.cpp
04_C_Plus_Simulation/src/matrix/: matrix.cpp  matrix2d.cpp  matrix3d.cpp  matrix4d.cpp
07_Debug/: compare.py  ila.py  tim.py
08_Tool/: hex2dec.py
(+268 files in other folders)
